# src/docs/OpenApi.yaml
@@ -4,7 +4,7 @@ info:
   version: v0
 servers:
   - url: http://localhost:8081
-    description: Generated server url
+    description: root url
 paths:
   /service-provider:
     post:
@@ -15,68 +15,20 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateReviewRequestDto'
+              $ref: '#/components/schemas/RequestSProviderDto'
         required: true
       responses:
-        "200":
-          description: OK
+        201:
+          description: CREATED
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Review'
-  /reviews/{reviewId}/unlike:
-    patch:
-      tags:
-        - review-controller
-      operationId: unlikeReview
-      parameters:
-        - name: reviewId
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Review'
-  /reviews/{reviewId}/like:
-    patch:
-      tags:
-        - review-controller
-      operationId: likeReview
-      parameters:
-        - name: reviewId
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Review'
-  /reviews/{id}:
+                $ref: '#/components/schemas/ResponseSProviderDto'
+  /service-provider/{id}:
     get:
       tags:
-        - review-controller
-      operationId: getReview
+        - sp-controller
+      operationId: retrieveServiceProvider
       parameters:
         - name: id
           in: path
@@ -84,16 +36,33 @@ paths:
           schema:
             type: string
       responses:
-        "200":
+        200:
           description: OK
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Review'
+                $ref: '#/components/schemas/ResponseSProviderDto'
+    put:
+      tags:
+        - sp-controller
+      operationId: updateServiceProvider
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestSProviderDto'
+        required: true
+      responses:
+        200:
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/ResponseSProviderDto'
     delete:
       tags:
-        - review-controller
-      operationId: deleteReview
+        - sp-controller
+      operationId: deleteServiceProvider
       parameters:
         - name: id
           in: path
@@ -101,105 +70,36 @@ paths:
           schema:
             type: string
       responses:
-        "200":
-          description: OK
+        204:
+          description: NO-CONTENT
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Review'
-    patch:
-      tags:
-        - review-controller
-      operationId: updateReview
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Review'
-        required: true
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Review'
-  /reviews/getAllReviews/{serviceId}:
-    get:
-      tags:
-        - review-controller
-      operationId: getAllReviews
-      parameters:
-        - name: serviceId
-          in: path
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Review'
+                $ref: '#/components/schemas/ResponseSProviderDto'
 components:
   schemas:
-    CreateReviewRequestDto:
+    RequestSProviderDto:
       type: object
       properties:
-        userId:
-          type: integer
-          format: int64
-        serviceName:
+        name:
           type: string
-        serviceId:
-          type: integer
-          format: int64
-        rating:
-          type: integer
-          format: int32
-        comment:
+        address:
           type: string
-    Review:
+        phoneNo:
+          type: string
+        category:
+          type: string
+    ResponseSProviderDto:
       type: object
       properties:
-        id:
-          type: string
-        userId:
+        spId:
           type: integer
           format: int64
-        serviceName:
+        name:
           type: string
-        serviceId:
-          type: integer
-          format: int64
-        rating:
-          type: integer
-          format: int32
-        comment:
+        address:
           type: string
-        likes:
-          type: integer
-          format: int32
-        likedByUserIds:
-          uniqueItems: true
-          type: array
-          items:
-            $ref: '#/components/schemas/User'
-    User:
-      type: object
-      properties:
-        userName:
+        phoneNo:
           type: string
-        id:
-          type: integer
-          format: int64
+        category:
+          type: string
